@@ -6,6 +6,7 @@
 CHANGES IN VERSION 1.4.5 (2013-03-19)
 
     o quadcc() iterative Clenshaw-Curtis quadrature.
+    o squareform() formats distance matrix (Matlab style).
 
 CHANGES IN VERSION 1.4.4 (2013-03-12)
 
